--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,8 @@ db.default.password=""
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=disabled
+# evolutionplugin=disabled
+slick.default="models.*"
 
 # Ebean configuration
 # ~~~~~
