--- a/conf/heroku.conf
+++ b/conf/heroku.conf
@@ -45,7 +45,7 @@ db.default.url=${DATABASE_URL}
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-evolutionplugin=disabled
+#evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
