Added ui-router, started angular development

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,6 +48,8 @@ db.default.password=""
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+applyEvolutions.default=true
+
 slick.default="models.*"
 
 # Ebean configuration
