--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.25"
+    "angular": "~1.2.25",
+    "angular-mocks": "~1.2.25",
+    "jasmine": "~2.0.4",
+    "lodash": "~2.4.1",
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.2.0",
+    "angular-resource": "~1.2.25",
+    "angular-animate": "~1.2.25",
+    "font-awesome": "~4.2.0",
+    "angular-ui-router": "~0.2.11",
+    "angular-ui-bootstrap-bower": "~0.11.0"
   }
 }
