--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-testem": "^0.5.16",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.2.9"
+    "grunt-html2js": "^0.2.9",
+    "grunt-ng-annotate": "^0.4.0"
   }
 }
