added slick to heroku conf

--- a/conf/heroku.conf
+++ b/conf/heroku.conf
@@ -46,6 +46,8 @@ db.default.url=${DATABASE_URL}
 # ~~~~~
 # You can disable evolutions if needed
 #evolutionplugin=disabled
+applyEvolutions.default=true
+slick.default="models.*"
 
 # Ebean configuration
 # ~~~~~
