--- a/conf/heroku.conf
+++ b/conf/heroku.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-
+include "securesocial.conf"
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
