--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "grunt-contrib-testem": "^0.5.16",
-    "load-grunt-tasks": "^0.6.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-coffee": "^0.11.1",
     "grunt-contrib-concat": "^0.5.0",
@@ -26,13 +24,12 @@
     "grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-testem": "^0.5.16",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html2js": "^0.2.9",
     "grunt-ng-annotate": "^0.4.0",
-    "imagemin-gifsicle": "^2.0.0"
-  },
-  "dependencies": {
-    "imagemin": "^2.0.0"
+    "imagemin-gifsicle": "^2.0.0",
+    "load-grunt-tasks": "^0.6.0"
   }
 }
