--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,12 @@ application.global=Global
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
+#db.default.driver=org.h2.Driver
+db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:postgresql://localhost:5432/proximal"
+db.default.user="proximal_admin"
+db.default.password="password"
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
