--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -24,7 +24,6 @@ securesocial {
     hasher=bcrypt
   }
 
-
   twitter {
     requestTokenUrl="https://twitter.com/oauth/request_token"
     accessTokenUrl="https://twitter.com/oauth/access_token"
@@ -48,5 +47,55 @@ securesocial {
     clientId=your_client_id
     clientSecret=your_client_secret
     scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
+  }
+  foursquare {
+    authorizationUrl="https://foursquare.com/oauth2/authenticate"
+    accessTokenUrl="https://foursquare.com/oauth2/access_token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+  }
+  github {
+    authorizationUrl="https://github.com/login/oauth/authorize"
+    accessTokenUrl="https://github.com/login/oauth/access_token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+  }
+  xing {
+    requestTokenUrl="https://api.xing.com/v1/request_token"
+    accessTokenUrl="https://api.xing.com/v1/access_token"
+    authorizationUrl="https://api.xing.com/v1/authorize"
+    consumerKey=your_consumer_key
+    consumerSecret=your_consumer_secret
+  }
+  instagram {
+    authorizationUrl="https://api.instagram.com/oauth/authorize"
+    accessTokenUrl="https://api.instagram.com/oauth/access_token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+  }
+  vk {
+    authorizationUrl="http://oauth.vk.com/authorize"
+    accessTokenUrl="https://oauth.vk.com/access_token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+  }
+  weibo {
+    authorizationUrl="https://api.weibo.com/oauth2/authorize"
+    accessTokenUrl="https://api.weibo.com/oauth2/access_token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+  }
+  dropbox {
+    authorizationUrl="https://www.dropbox.com/1/oauth2/authorize"
+    accessTokenUrl="https://api.dropbox.com/1/oauth2/token"
+    clientId=your_app_key
+    clientSecret=your_app_secret
+  }
+  linkedin {
+    requestTokenUrl="https://api.linkedin.com/uas/oauth/requestToken"
+    accessTokenUrl="https://api.linkedin.com/uas/oauth/accessToken"
+    authorizationUrl="https://api.linkedin.com/uas/oauth/authenticate"
+    consumerKey=your_consumer_key
+    consumerSecret=your_consumer_secret
   }
 }
