Signup and login is working
Still need to figure out a email account to use for the signup process

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -2,8 +2,8 @@ smtp {
   host=smtp.gmail.com
   #port=25
   ssl=true
-  #user="your_user"
-  #password=your_password
+  user="" #This needs to be set...
+  password="" #This needs to be set...
   from="no-reply-proximal@gmail.com"
 }
 
