Styled the login page that is using SecureSocial
Also got google and facebook login working

Still need to style the password reset page

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -2,8 +2,8 @@ smtp {
   host=smtp.gmail.com
   #port=25
   ssl=true
-  user="" #This needs to be set...
-  password="" #This needs to be set...
+  user="proximal.learn@gmail.com"
+  password="seniorDesi8n" 
   from="no-reply-proximal@gmail.com"
 }
 
@@ -35,8 +35,8 @@ securesocial {
   facebook {
     authorizationUrl="https://graph.facebook.com/oauth/authorize"
     accessTokenUrl="https://graph.facebook.com/oauth/access_token"
-    clientId=your_client_id
-    clientSecret=your_client_secret
+    clientId="475114269297267"
+    clientSecret="dfab4b5b2ccfccaf5a11e8f4d7f5ffcb"
     # this scope is the minimum SecureSocial requires.  You can add more if required by your app.
     scope=email
   }
@@ -44,9 +44,9 @@ securesocial {
   google {
     authorizationUrl="https://accounts.google.com/o/oauth2/auth"
     accessTokenUrl="https://accounts.google.com/o/oauth2/token"
-    clientId=your_client_id
-    clientSecret=your_client_secret
-    scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
+    clientId="716360385018-vrc84ktq9h18b45mh3d5psnkkgs59ej2.apps.googleusercontent.com"
+    clientSecret="_GUVbLBYBKzzxI-Re1zhRji0"
+    scope="profile email"
   }
   foursquare {
     authorizationUrl="https://foursquare.com/oauth2/authenticate"
