--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-ui-bootstrap-bower": "~0.11.0"
   },
   "devDependencies": {
-    "sizzle": "~2.0.0"
+    "sizzle": "~2.0.0",
+    "angular-cookies": "~1.2.26"
   }
 }
