--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,10 @@ application.global=Global
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-#db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:h2:mem:play"
-#db.default.url="jdbc:postgresql://localhost:5432/proximal"
+#db.default.driver=org.h2.Driver
+db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:postgresql://localhost:5432/proximal"
 #db.default.user="proximal_admin"
 #db.default.password="password"
 #
