Removed evolutions in production!

--- a/conf/heroku.conf
+++ b/conf/heroku.conf
@@ -45,9 +45,9 @@ db.default.url=${DATABASE_URL}
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-#evolutionplugin=disabled
-applyEvolutions.default=true
-slick.default="models.*"
+evolutionplugin=disabled
+#applyEvolutions.default=true
+#slick.default="models.*"
 
 # Ebean configuration
 # ~~~~~
