Standards are now saving to the database

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ db.default.url="jdbc:postgresql://localhost:5432/proximal"
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-applyEvolutions.default=true
+#applyEvolutions.default=true
 
 slick.default="models.*"
 
