--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,13 @@
 
 include "securesocial.conf"
 
+
+# Amazon S3 Details
+aws.s3.bucket=proximaldev
+aws.s3.accesskey=AKIAJR3UBL4DK7RP3GHQ 
+aws.s3.secretkey="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"
+
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
