added Answers database

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,10 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
-
-
-
-
 include "securesocial.conf"
 
 
@@ -62,8 +58,8 @@ db.default.url="jdbc:postgresql://localhost:5432/proximal"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-#evolutionplugin=disabled
-#applyEvolutions.default=true
+evolutionplugin=disabled
+#applyEvolutions.default=false
 
 slick.default="models.*"
 
