--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -98,4 +98,18 @@ securesocial {
     consumerKey=your_consumer_key
     consumerSecret=your_consumer_secret
   }
+  concur {
+    authorizationUrl="https://www.concursolutions.com/net2/oauth2/Login.aspx"
+    accessTokenUrl="https://www.concursolutions.com/net2/oauth2/GetAccessToken.ashx"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+    scope="USER"
+  }
+  soundcloud {
+    authorizationUrl="https://soundcloud.com/connect"
+    accessTokenUrl="https://api.soundcloud.com/oauth2/token"
+    clientId=your_client_id
+    clientSecret=your_client_secret
+    scope="non-expiring"
+  }
 }
