Added assesetcontroller and fixed QuestionScores

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,6 +29,11 @@ application.langs="en"
 # Default to Global in the root package.
 application.global=Global
 
+# Akka
+# ~~~~~
+akka.default-dispatcher.fork-join-executor.pool-size-max =64
+akka.actor.debug.receive = on
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
