Lots of work on the client side for homework

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -4,12 +4,6 @@
 include "securesocial.conf"
 
 
-# Amazon S3 Details
-aws.s3.bucket=proximaldev
-aws.s3.accesskey=AKIAJR3UBL4DK7RP3GHQ 
-aws.s3.secretkey="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"
-
-
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -28,6 +22,11 @@ application.langs="en"
 # Define the Global object class for this application.
 # Default to Global in the root package.
 application.global=Global
+
+# Akka
+# ~~~~~
+akka.default-dispatcher.fork-join-executor.pool-size-max =64
+akka.actor.debug.receive = on
 
 # Router
 # ~~~~~
