--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: scala
 scala:
-  - 2.10.0
-script: "sbt clean coverage test"
-after_success: "sbt coveralls"
+- 2.11.1
+script: sbt clean coverage test
+after_success: sbt coveralls
+deploy:
+  provider: heroku
+  api_key:
+    secure: DnmzNk7tX0yF00sSFquyBfXxOxIPlCsGV5VpPtapv9sGwJ4pwhkZATskvNAK46WLTu/yW5lzj+Xo/G7QfUZCGKyrnSW248rVzRxxl63deOSMOYSkqENmkoEIbGh1BCN20a8AFI5tOLwsAPzLpGZVtp8UVEAnYq8VzLhSHKD1D70=
+  app: proximal
+  on:
+    repo: silbermm/proximal
+    branch: master
