Adding webpack to the build process

--- a/package.json
+++ b/package.json
@@ -1,1 +1,58 @@
-{}
+{
+  "name": "proximal",
+  "version": "0.1.0",
+  "description": "proximal frontend",
+  "main": "app.js",
+  "scripts": {
+    "build": "webpack --progress --colors",
+    "watch": "webpack --progress --colors --watch",
+    "start": "webpack -d --progress --colors --watch | webpack-dev-server --progress --colors --inline",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -r build/*"
+  },
+  "browser": {
+    "angular": "./web/thirdparty/angular/angular-index.js",
+    "angular-resource": "./node_modules/angular-resource/angular-resource.js",
+    "angular-animate": "./node_modules/angular-animate/angular-animate.js",
+    "angular-sanitize": "./node_modules/angular-sanitize/angular-sanitize.js",
+    "angular-cookies": "./node_modules/angular-cookies/angular-cookies.js",
+    "angular-toaster": "./web/thirdparty/angular/angular-toaster.js",
+    "ui-router": "./node_modules/angular-ui-router/release/angular-ui-router.js",
+    "ui-bootstrap": "./node_modules/angular-bootstrap/dist/ui-bootstrap-tpls.js",
+    "ui-select2": "./node_modules/angular-ui-select2/src/select2.js",
+    "ng-file-upload": "./node_modules/ng-file-upload/dist/angular-file-upload-all.js"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "angular": "^1.3.13",
+    "babel-core": "^4.1.1",
+    "babel-loader": "^4.0.0",
+    "css-loader": "^0.9.1",
+    "extract-text-webpack-plugin": "^0.3.8",
+    "image-webpack-loader": "^1.2.0",
+    "imagemin": "^3.1.0",
+    "jshint": "^2.6.0",
+    "jshint-loader": "^0.8.3",
+    "ngtemplate-loader": "^1.0.0",
+    "sass-loader": "^0.4.0-beta.1",
+    "style-loader": "^0.8.3",
+    "webpack": "^1.5.3",
+    "webpack-dev-server": "^1.7.0"
+  },
+  "dependencies": {
+    "angular-animate": "^1.3.13",
+    "angular-bootstrap": "^0.12.0",
+    "angular-cookies": "^1.3.13",
+    "angular-resource": "^1.3.13",
+    "angular-route": "^1.3.13",
+    "angular-sanitize": "^1.3.13",
+    "angular-ui-router": "^0.2.13",
+    "angular-ui-select2": "0.0.5",
+    "bootstrap-sass": "^3.3.3",
+    "jquery": "^2.1.3",
+    "lodash": "^3.3.1",
+    "ng-cache-loader": "0.0.8",
+    "ng-file-upload": "^3.0.7",
+    "select2": "^3.5.2-browserify"
+  }
+}
