--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: scala
+language:
+  - scala
+  - node_js
 scala:
 - 2.11.1
-script: sbt clean coverage test
+script:
+  - npm run build
+  - sbt clean coverage test
 after_success: sbt coveralls
 deploy:
   provider: heroku
