--- a/package.json
+++ b/package.json
@@ -27,15 +27,22 @@
     "angular": "^1.3.13",
     "babel-core": "^4.1.1",
     "babel-loader": "^4.0.0",
+    "bootstrap": "^3.3.2",
+    "bootstrap-webpack": "0.0.3",
     "css-loader": "^0.9.1",
     "extract-text-webpack-plugin": "^0.3.8",
+    "file-loader": "^0.8.1",
+    "font-awesome": "^4.3.0",
+    "font-awesome-webpack": "0.0.3",
     "image-webpack-loader": "^1.2.0",
     "imagemin": "^3.1.0",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.3",
+    "less-loader": "^2.0.0",
     "ngtemplate-loader": "^1.0.0",
     "sass-loader": "^0.4.0-beta.1",
     "style-loader": "^0.8.3",
+    "url-loader": "^0.5.5",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   },
@@ -48,6 +55,7 @@
     "angular-sanitize": "^1.3.13",
     "angular-ui-router": "^0.2.13",
     "angular-ui-select2": "0.0.5",
+    "bootstrap-less": "^3.3.5",
     "bootstrap-sass": "^3.3.3",
     "jquery": "^2.1.3",
     "lodash": "^3.3.1",
