more and more tries to reduce slug size

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,13 +3,6 @@
 
 include "securesocial.conf"
 
-
-# Amazon S3 Details
-aws.s3.bucket=proximaldev
-aws.s3.accesskey=AKIAJR3UBL4DK7RP3GHQ 
-aws.s3.secretkey="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"
-
-
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -53,7 +46,7 @@ akka.actor.debug.receive = on
 #db.default.driver=org.h2.Driver
 db.default.driver=org.postgresql.Driver
 #db.default.url="jdbc:h2:mem:play"
-db.default.url="jdbc:postgresql://localhost:5432/proximal"
+db.default.url=${DATABASE_URL}
 #db.default.user="proximal_admin"
 #db.default.password="password"
 #
