--- a/conf/heroku.conf
+++ b/conf/heroku.conf
@@ -31,6 +31,12 @@ application.global=Global
 # Default to Routes in the root package (and `conf/routes`)
 # application.router=my.application.Routes
 
+# Akka
+# ~~~~~
+akka.default-dispatcher.fork-join-executor.pool-size-max =64
+akka.actor.debug.receive = on
+
+
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
