--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ scala:
   - 2.11.1
 script:
   - sbt clean coverage test stage
-after_success: sbt coverageReport codacyCoverage deployHeroku
+after_success: sbt coverageReport deployHeroku
 env: 
-  - CODACY_PROJECT_TOKEN=cdfe8b45484e4729bc947d3df4a8c79b
+  #- CODACY_PROJECT_TOKEN=cdfe8b45484e4729bc947d3df4a8c79b
   global: 
     - secure: DnmzNk7tX0yF00sSFquyBfXxOxIPlCsGV5VpPtapv9sGwJ4pwhkZATskvNAK46WLTu/yW5lzj+Xo/G7QfUZCGKyrnSW248rVzRxxl63deOSMOYSkqENmkoEIbGh1BCN20a8AFI5tOLwsAPzLpGZVtp8UVEAnYq8VzLhSHKD1D70=
 
